<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">All SX Video Downloader</string>

    <string name="adMode">1</string>

    <string name="title_home">Home</string>
    <string name="title_downloads">Downloads</string>
    <string name="title_whatsapp">Whatsapp</string>

    <string name="whatsapp_download">Whatsapp Status Downloader</string>
    <string name="no_status">Watch any status update and come back here!</string>
    <string name="StatusParsing">Parsing Statuses</string>

    <string name="enter_url">Search or Type URL</string>

    <string name="msg_share">Download this awesome all video downloader app!</string>
    <string name="app_link">https://play.google.com/store/apps/details?id=com.delinnovTech.downloader</string>

    <string name="no_history">No History</string>
    <string name="history">History</string>
    <string name="delete">Delete</string>
    <string name="open_url">Open Url</string>
    <string name="copy_url">Copy Url</string>
    <string name="copy_msg">URL Copied</string>
    <string name="video">Videos</string>
    <string name="share">Share</string>
    <string name="shareus">Share Us</string>
    <string name="moreapp">More App</string>
    <string name="share_msg">Check this awesome free All SX Video Downloader. You can download video from 100+ websites.</string>
    <string name="go_to_folder">Location</string>
    <string name="rename">Rename</string>
    <string name="download">Download</string>
    <string name="speed_0">Speed: 0KB/s</string>
    <string name="remaining_undefine">Remaining: —</string>
    <string name="empty_download_list">Do you want to clear this list?</string>

    <string name="settings">Settings</string>
    <string name="vibrate">Vibrate on Download Complete</string>
    <string name="sound">Sound on Download Complete</string>
    <string name="browser">Browser</string>
    <string name="ad_blocker">Ad Blocker</string>
    <string name="help">Help</string>
    <string name="rate">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_link">https://app-developer-link.github.io/downloader/</string>
    <string name="fb_intrestitialAds">313897363373266_313899716706364</string>

    <string-array name="blocked_sites">
        <item>youtube.com</item>
    </string-array>
    <string name="title_activity_setting_navigation_drawer">SettingNavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="banner_ad">ca-app-pub-2136082153268260/3007853827</string>
    <string name="intersitial_ad">ca-app-pub-2136082153268260/5031381930</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
