<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:showIn="navigation_view">

    <item android:id="@+id/menu_addBlocker"
        app:actionLayout="@layout/switch_menu"
        android:title="@string/ad_blocker"
        android:visible="false"
        android:icon="@drawable/ic_adblock"/>

    <group android:id="@+id/grp1"
        android:checkableBehavior="single" >

        <item
            android:id="@+id/menu_ratUs"
            android:icon="@drawable/ic_ratus"
            android:title="@string/rate" />

    </group>

    <group android:id="@+id/grp2"
        android:checkableBehavior="single" >
        <item
            android:id="@+id/menu_shareUs"
            android:icon="@drawable/ic_shareus"
            android:title="@string/shareus" />
    </group>

    <group android:id="@+id/grp3"
        android:checkableBehavior="single" >
        <item
            android:id="@+id/menu_Privacy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy_policy" />
    </group>


</menu>