<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_dark"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_marginTop="@dimen/_8sdp"
            android:id="@+id/download_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
             app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/download"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/downloadsTopBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_1sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/download_toolbar">

            <TextView
                android:id="@+id/downloadSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/speed_0"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/remaining"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/remaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/remaining_undefine"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/downloadSpeed"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/downloadsTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/downloadsTopBar">

            <TextView
                android:id="@+id/completedTab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:textColor="@color/tudou" />

            <View
                android:layout_width="@dimen/_2sdp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_4sdp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/inProgressTab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"

                android:text="123"
                android:textColor="@color/tudou" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/downloadsPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/theme_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintTop" />

</androidx.constraintlayout.widget.ConstraintLayout>