<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/theme_dark">

    <RelativeLayout
        android:id="@+id/history_rv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@color/theme_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/txt_history"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_below="@id/txt_history"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
             android:id="@+id/historySearchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.cardview.widget.CardView
                app:contentPaddingLeft="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/gray"
                android:layout_margin="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_4sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/historySearchText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/gray"
                        android:hint="@string/enter_url"
                        android:textColorHint="#90000000"
                        android:fontFamily="@font/poppins_light"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_10sdp"
                        android:inputType="text"
                        android:imeOptions="actionGo"
                        android:imeActionId="666"
                        android:imeActionLabel="Enter"
                        android:maxLines="1"
                        android:layout_weight="1"/>

                    <ImageView
                        android:id="@+id/history_search_cancel"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:padding="@dimen/_4sdp"
                        android:tint="@color/blue_icons"
                        android:src="@drawable/ic_close"
                        android:visibility="invisible"/>

                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:id="@+id/historySearchIcon"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/ic_search"
                        android:tint="@color/blue_icons"
                        android:visibility="visible"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>



        </LinearLayout>
    </RelativeLayout>



    <LinearLayout
        android:id="@+id/llNoHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/history_rv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/_8sdp"
            android:layout_gravity="center"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/poppins_light"
            android:textColor="@android:color/white"

            android:text="@string/no_history" />
    </LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/history_rv"
        android:id="@+id/llShowHistory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:text="History"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15sdp" />

            <ImageView
                android:id="@+id/btn_delete_history"
                android:layout_width="@dimen/icon_dimen"
                android:layout_height="@dimen/icon_dimen"
                android:layout_gravity="center"
                android:tint="@color/blue_icons"
                android:layout_marginEnd="@dimen/_5sdp"
                android:src="@drawable/ic_delete"
                 />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHistoryList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/history_item" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>